# TrueTone

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  pyproject.toml
api/app/: main.py  settings.py
api/app/db/: dynamo_jobs.py
api/app/queue/: sqs_client.py
api/app/routes/: jobs.py  uploads.py
api/app/schemas/: jobs.py
api/app/storage/: s3_client.py
shared/: logging.py
worker/app/: settings.py  worker.py
worker/app/db/: dynamo_jobs.py
worker/app/pipeline/: generator_diffusion_inpaint.py  interfaces.py  postprocess.py  segmenter_mediapipe.py  styles.py
worker/app/queue/: sqs_client.py
worker/app/storage/: s3_client.py
